--- a/LESS/index.less
+++ b/LESS/index.less
@@ -1,3 +1,4 @@
+//out: ../css/index
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,9 +12,9 @@
 
 
 body {
-	box-sizing: border-box;
-	min-width: 300px;
-	margin: 0;
+  box-sizing: border-box;
+  min-width: 300px;
+  margin: 0;
 }
 
 .header-container {
@@ -22,8 +23,9 @@ body {
   border-bottom: 1px solid @white;
   display: flex;
   justify-content: center;
-  align-items: center;  
+  align-items: center;
   background-color: @lambda-red;
+
   .header {
     height: 50px;
   }
@@ -39,8 +41,10 @@ body {
   box-shadow: 1px 1px 5px @lambda-red;
   border-radius: 10px;
   overflow: hidden;
+
   .box {
     padding: 40px;
+
     .box-title {
       font-size: 24px;
       padding-bottom: 10px;
@@ -48,6 +52,3 @@ body {
     }
   }
 }
-
-
-
