--- a/components/Tabs/Tabs.less
+++ b/components/Tabs/Tabs.less
@@ -1,4 +1,20 @@
 //out:false
+.arrow {
+  display: flex;
+  justify-content: center;
+
+  &,
+  button {
+    width: 75%;
+  }
+
+  button {
+    height: 100%;
+    font-size: 24px;
+    font-weight: bold;
+  }
+}
+
 .tabs {
   width: 100%;
 
